2002-02-10  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Remove os2/iconv/README.

2002-01-14  Bruno Haible  <bruno@clisp.org>

	* configure.in: Add check for libexpat.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (SUBDIRS): Add libuniname.
	* configure.in (AC_OUTPUT): Add libuniname/Makefile.

2002-02-06  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh: Upgrade from libtool-1.4 to libtool-1.4.2.
	* config.rpath: Likewise.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh: Add DESTDIR support on ELF systems.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Bump version number to 0.11.
	(RELEASE_DATE): Bump.
	* Makefile.am (EXTRA_DIST): Remove README-alpha.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Remove instructions for using Intel icc. It's getting to
	be fixed in icc.

2002-01-30  Bruno Haible  <bruno@clisp.org>

	* configure.in:
	Check for strtoul through AC_CHECK_FUNCS, not AC_REPLACE_FUNCS.
	Call gt_FUNC_ERROR_AT_LINE instead of AM_FUNC_ERROR_AT_LINE.
	* PACKAGING: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am ($(srcdir)/tests/rpathy/aclocal.m4): Fix dependencies.

2002-01-21  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add os2/configure.awk.
	Remove os2/iconv/iconv.h, os2/iconv/iconv.c.

2002-01-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (CONFIGURES_RPATH*): New variables.
	($(srcdir)/tests/rpath*/Makefile.in): New rules.
	($(srcdir)/tests/rpath*/aclocal.m4): New rules.
	($(srcdir)/tests/rpath*/configure): New rules.
	(SUBCONFIGURES): New variable.
	(subconfigures): New target.
	(distdir): Depend on subconfigures.
	* configure.in: Propagate GCC, LD, with_gnu_ld to Makefiles.
	Postprocess Makefile because of distdir dependency.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Add instructions for using Intel icc.
